Ui: fix default PersonListPanel background color
Normally, the background of the PersonListPanel is gray in color.
However, the PersonListPanel background becomes white when no Person
is listed.

This does not fit the dark theme style of Ui as the difference in
color makes the PersonListPanel stands out rather prominently.

Let's fix this by setting the default background color of
PersonListPanel to match the rest of the Ui.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -90,6 +90,7 @@
 .list-view {
     -fx-background-insets: 0;
     -fx-padding: 0;
+    -fx-background-color: derive(#1d1d1d, 20%);
 }
 
 .list-cell {
